--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <input type="text" id="userInput" />
           </div>
           <button onclick="question()">Click here</button>
-          <p id="demo">Try me!</p>
+          <p id="demo">Ask me!</p>
         </div>
       </section>
     </main>
